# sysmon-qt

./: .gitignore  CLAUDE.md  FEATURE_IDEAS.md  README.md  pyproject.toml
src/sysmon/: __init__.py  __main__.py  app.py
src/sysmon/collectors/: __init__.py  base.py  cpu.py  disk.py  memory.py  network.py  process.py  system.py  thermal.py
src/sysmon/core/: __init__.py  config.py  history.py  sampler.py
src/sysmon/ui/: compact_view.py  cpu_view.py  disk_view.py  main_window.py  memory_view.py  network_view.py  overview_view.py  plot_widget.py  process_view.py  thermal_view.py
tests/: test_collectors_cpu.py  test_collectors_disk.py  test_collectors_memory.py  test_collectors_network.py  test_collectors_process.py  test_collectors_system.py  test_collectors_thermal.py  test_config.py  test_history.py  test_main_window.py  test_sampler.py  test_ui_smoke.py  test_ui_thermal.py
