[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysmon-qt"
version = "0.1.0"
description = "Linux system performance monitor — live CPU, memory, disk, and network metrics in a Qt desktop app."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sysmon" }]
keywords = ["system", "monitor", "performance", "cpu", "memory", "disk", "network", "linux", "qt", "pyside6"]
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "PySide6>=6.6",
    "psutil>=5.9",
    "pyqtgraph>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-qt>=4",
]

[project.scripts]
sysmon = "sysmon.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
